frontend/k8s/nginx-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sljk-nginx-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/rewrite-target: /
  namespace: ingress-nginx
spec:
  rules:
    - host: davidsljukic.xyz
      http:
        paths:
          - path: /
            backend:
              serviceName: portfolio-service
              servicePort: 80
