frontend/k8s/portfolio-service.yml
apiVersion: "v1"
kind: "Service"
metadata:
  name: "portfolio-service"
spec:
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 3000
  selector:
    app: "portfolio"
  type: "NodePort"
